# emailaddress

./: Cargo.toml  README.md
src/: common.rs  lib.rs  rfc6531.rs  simple.rs
tests/: test_fromstr.rs
